# melldechof-api

./: .env.dist  .gitattributes  README.md  app.py  fabfile.py  pyproject.toml  seed.sql
alembic/: env.py
alembic/versions/: 4611441634ad_initial_db.py  6b041b52caa6_add_user_name.py
melldechof/: api.py  db.py  dbtypes.py  localtypes.py  models.py
tests/: test_api.py
