[tool.poetry]
name = "melldechof-api"
version = "0.1.0"
description = "API for melldechof"
authors = ["Michel Albert <michel@albert.lu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
httpx = "^0.16.1"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
uvicorn = "^0.12.1"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.2"
requests = "^2.25.0"
isort = "^5.6.4"
pytest-dependency = "^0.5.1"
alembic = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
